--- a/petshop/src/main/resources/application.properties
+++ b/petshop/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 jwt.secret=cuRnvNiD8wpVYu-hTyFN7LEwNoTnWMws-Ho-QyIOL6nhESaF_xQR2t80SrOD0ZzSLOVPZpF-x6k4OOP3IA9FDw==
 jwt.expiration=180000
